<resources>
    <string name="app_name">BaseRemoteController</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="wavem_robot_app">웨이브엠\n로봇단말기</string>
    <string name="page_name_ko">페이지</string>
    <string name="ok_ko">확인</string>
    <string name="cancel_ko">취소</string>
    <string name="setting_page">페이지 설정</string>
    <string name="add_page">새 페이지 추가</string>
    <string name="setting_menu">메뉴 설정</string>
    <string name="add_menu">새 메뉴 추가</string>
    <string name="menu_name_ko">메뉴</string>
    <string name="setting_widget">위젯 설정</string>
    <string name="widget_name">위젯 이름</string>
    <string name="widget_name_hint">위젯명</string>
    <string name="widget_position">위젯 위치/크기</string>
    <string name="position_x">X좌표</string>
    <string name="position_y">Y좌표</string>
    <string name="width">넓이</string>
    <string name="height">높이</string>
    <string name="message_ko">메시지</string>
    <string name="message_name">메시지 이름</string>
    <string name="message_type">메시지 타입</string>
    <string name="joystick_setting">조이스틱 설정</string>
    <string name="linear_max_vel">전/후진 최대속력</string>
    <string name="angular_max_vel">회전 최대 속력</string>
    <string name="mode_linear">전진모드</string>
    <string name="mode_angular">회전모드</string>
    <string name="mode_default">기본모드</string>
    <string name="save">저장</string>
</resources>